- [trends,stats] issue buildtimetrend/python-dashboard#3 : Show spinner when charts are being updated
- issue buildtimetrend/python-lib#146 : improve constructing badgeUrl
- issue buildtimetrend/python-lib#143 : convert to using seperate keen-dataviz
and keen-analysis libraries, now using c3.js for charts
- issue buildtimetrend/dashboard#8 : stack columns in charts

v0.3 (released on 16Nov2015)
- issue buildtimetrend/python-lib#21 : add charts with build job results
- issue buildtimetrend/python-lib#52 : upgrade to Keen JS API 3.2
- issue buildtimetrend/python-lib#23 : add charts with build job results grouped by branch or by build environment parameters
- issue buildtimetrend/python-lib#70 : use bootstrap buttons and ButtonClass on dashboard to select timeframe
- issue buildtimetrend/python-lib#93 : upgrade to bootstrap 3.3.5
- issue buildtimetrend/python-lib#88 : use caching for Keen.io charts
- issue buildtimetrend/python-lib#99 : Enable auto refreshing dashboard charts with `refresh` url parameter
- issue buildtimetrend/python-lib#108 : Make projects menu scrollable
- issue buildtimetrend/python-lib#100, #103 : Filter on build properties for chart data, like build
trigger, branch, build matrix, build result
- issue buildtimetrend/python-lib#108 : Limit size of projects dropdown menu and make it scrollable
- issue buildtimetrend/python-lib#91 : display stats of pull requests
- issue buildtimetrend/python-lib#45 : add charts with average build job per branch and build matrix parameters
- issue buildtimetrend/python-lib#113 : use url parameter to set default timeframe
- issue buildtimetrend/python-lib#121 : use url parameter to set query filters
- upgrade to Keen Javascript API 3.3.0
- issue buildtimetrend/python-lib#84 : Add admin dashboard with service usage statistics

v0.2 (released on 18Feb2015)
- issue buildtimetrend/python-lib#19 : update Keen.io charts using query request refresh function